# pkmn-infinite-diffusion

./: .gitignore  README.md  dataset_validation_report.txt  pyproject.toml
configs/: config.ini  train.yaml
notebooks/: API-tests.ipynb  initial-tests.ipynb
scripts/: dataset_visualizer.py  generate_images.py  get_metadata.py  preprocess.py  simple_diffusion.py  train.py  validate_dataset.py
src/models/: attention.py  unet.py
src/training/: ddim.py  ema.py  train.py
src/utils/: dataset.py  preprocess.py  utils.py
